kubernetes/apps/default/home-assistant/zwavejs/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zwavejs
spec:
  parentRefs:
    - name: envoy-gateway-local
      namespace: network
      sectionName: https
  hostnames:
    - zwavejs.lab.egenintres.se
  rules:
    - backendRefs:
        - name: zwavejs
          port: 8091
